# IndividualTeacher

./: .env.production.example  .gitignore  DEPLOYMENT.md  NORTHSTAR_HANDOFF.md  Notes.md  README.md  docker-compose.yml  package-lock.json
.github/workflows/: deploy.yml
IndividualTeacher/: .gitignore  Notes.md  README.md  database.json  index.html  package-lock.json  package.json
IndividualTeacher/backend/: app.py  database.py
IndividualTeacher/frontend/: package-lock.json  package.json
IndividualTeacher/frontend/src/: App copy.tsx  App.tsx
IndividualTeacher/src/: App.tsx
IndividualTeacher/src/components/: Chat.tsx  Quiz.tsx  QuizManager.tsx
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  config.py  database.py  import_videos.py  migrate_chromadb.py  pyproject.toml  requirements.txt  video_processor.py
backend/api/: ai_generator.py  auth.py  chat.py  quizzes.py  recommendations.py
backend/core/: database.py  embeddings.py  llm.py  pdf_processor.py  quiz_generation.py
backend/scripts/: import_videos.py
backend/services/: llm_service.py
backend/tests/: test_apis.py  test_crawler.py  test_database.py  test_full_pipeline.py  test_vector_search.py  test_video_processor.py
backend/video_importer/: import_embeddings.py
deploy/: nginx.conf
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
video_importer/: .gitignore  README.md  fetch_transcripts.py  process_embeddings.py  pyproject.toml  requirements.txt  setup_venv.md  video_catalog.json
(+15 files in other folders)
